# nodus-mcp-server

./: .gitignore  README.md  claude_desktop_config.json  memory_store.py  pyproject.toml  runner.py  server.py
goals/: pipeline.nd
nodus_mcp_server/: memory_store.py  runner.py  server.py
nodus_mcp_server/goals/: summarize.nd
nodus_mcp_server/workflows/: research.nd
tests/: test_memory_store.py  test_runner.py
